# async_rmq

./: main.py  pyproject.toml
rmq/: consumer_channel.py  consumer_x.py  publisher.py
